style.css
/* Universal Reset */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Body Styling */
body {
    display: flex;
    flex-direction: column;
    font-family: "Roboto", sans-serif; 
}

/* Link Styling */
a {
    text-decoration: none;
    color: #e5e7eb;
}

/* Unordered List Styling */
ul {
    list-style: none;
    display: flex;
    gap: 30px;
}

/* Section Styling-1 */
.section-1 {
    background-color: #1f2937;
    color: white;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    padding: 10px 100px;
}

/* Header Styling */
.header {
    display: flex;
    justify-content: space-between;
    padding: 20px;
}

/* Logo Styling */
.logo {
    font-weight: 600;
    font-size: 24px;
}
/* sub-section 1 */
.sub-section-1{
    display: flex;
    justify-content: center;
    padding-top: 50px;
    margin-bottom: 50px;
}
.hero-container{
    width: 400px;
}
.hero-text{
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
}
.hero-sec-text{
    font-size: 15px;
    color: #e5e7eb;
}

.hero-button{
    padding: 5px 20px;
    margin-top: 10px;
    background-color: #3882f6;
    border: none;
    color: white;
    border-radius: 5px;
    cursor: pointer;
}

